# CxxFunctionBenchmark

./: .gitignore  .gitmodules  CMakeLists.txt  Function-rigtorp.h  Function.h  README.md  StaticFunction.h  cxx_function.hpp  cxx_function_msvc.hpp  delegate.h  delegate.hpp  forwarder.hpp  function.h  highest_supp_cmake_cxx_standard.cmake  lightptr.hpp  main.cpp  measure.hpp  overload.cpp  stdex.hpp  various.cpp
bde/: CMakeLists.txt
clugston_styled/: FastDelegate.h  FastFunc.hpp
folly/: folly-config.h
